crates/rattler_shell/src/shell/snapshots/rattler_shell__shell__tests__bash.snap
---
source: crates/rattler_shell/src/shell/mod.rs
expression: script.contents
---
export FOO=bar
export FOO2='a b'
export FOO3="a\\b"
export FOO4="${UNEXPANDED_VAR}"
unset FOO
export PATH="${PATH}:bar:a/b"
export PATH="bar:a/b:${PATH}"
export PATH="bar:a/b"
. foo.sh
. "a\\foo.sh"
