crates/rattler_shell/src/shell/snapshots/rattler_shell__shell__tests__fish.snap
---
source: crates/rattler_shell/src/shell/mod.rs
expression: script.contents
---
set -gx FOO "bar"
set -e FOO
source "foo.sh"
