crates/rattler_shell/src/shell/snapshots/rattler_shell__shell__tests__sh.snap
---
source: crates/rattler_shell/src/shell/mod.rs
expression: script.contents
---
export FOO=bar
unset FOO
. foo.sh
