crates/rattler_shell/src/shell/snapshots/rattler_shell__shell__tests__xonsh_bash.snap
---
source: crates/rattler_shell/src/shell/mod.rs
expression: script.contents
---
source-bash "foo.sh"
