crates/rattler_shell/src/shell/snapshots/rattler_shell__shell__tests__xonsh_xsh.snap
---
source: crates/rattler_shell/src/shell/mod.rs
expression: script.contents
---
$FOO = "bar"
del $FOO
source "foo.xsh"
